--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-hello
+<!DOCTYPE html>
+<html lang="en-us">
+
+<head>
+    <meta charset="UTF-8">
+    <title>
+        Sweedishhfish's Github Page
+    </title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+<header>
+   <h1>
+        Hello Everybody!
+    </h1>
+</header>
+
+<body>
+
+</body>
+</html>
