--- a/HW-Wireframe/index.html
+++ b/HW-Wireframe/index.html
@@ -3,15 +3,30 @@
 <html>
 
 <head>
-<title>Header</title>
+<meta charset="UTF-8">
+<link rel="stylesheet" href="style.css">
+<title>Homework 1</title>
+
 </head>
+
 <body>
+
 <header>header</header>
-<h1>h1</h1>
-<h2>h2</h2>
-<h3>h3</h3>
+
+<div id="nav">nav</div>
+
+<div id="section">section</div>
+
+<div id="article">article</div>
+
+<h1>h1,h2,h3</h1>
+
 <p>p</p>
-<div>aside</div>
+
+<div id="aside">aside</div>
+
 <footer>footer</footer>
+
 </body>
+
 </html>
