--- a/HW-Wireframe/index.html
+++ b/HW-Wireframe/index.html
@@ -3,29 +3,41 @@
 <html>
 
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="style.css">
-<title>Homework 1</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <title>Homework 1</title>
 
 </head>
 
 <body>
 
-<header>header</header>
+    <header>header</header>
 
-<div id="nav">nav</div>
+    <div id="nav">
+        <p>nav</p>
+    </div>
 
-<div id="section">section</div>
+    <div id="section">
 
-<div id="article">article</div>
+        <p>section</p>
 
-<h1>h1,h2,h3</h1>
+        <div id="article">article
 
-<p>p</p>
+           <div id="articleHeader"> <h1>h1,h2,h3</h1> </div>
 
-<div id="aside">aside</div>
+            <div id="articleText">
+                <p>p</p>
+            </div>
 
-<footer>footer</footer>
+        </div>
+
+    </div>
+
+    <div id="aside">
+        <p>aside</p>
+    </div>
+
+    <footer>footer</footer>
 
 </body>
 
