--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 <div>
-    <img src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/31968116_1851801508176117_3283383643162017792_o.jpg?_nc_cat=0&oh=5fb304c23378e2f52033175834af272a&oe=5B87DD05" height="500" width="750">
+    <img src="cuteRaz.jpg" height=100%>
 </div>
 </body>
 </html>
