Updated my homepage

--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
 </head>
 
 <header>
-   <h1>
+    <h1>
         Hello Everybody!
     </h1>
 </header>
 
 <body>
-<div>
-    <img src="cuteRaz.jpg" height=100%>
-</div>
+    <div id="links">
+        <a id="boot" href="Bootstrap-Portfolio/index.html">My Bootstrap Portfolio</a>
+
+        <a id="responsive" href="Responsive-Portfolio/index.html">My Responsive Portfolio</a>
+    </div>
+
+
+
+    <div>
+        <img src="cuteRaz.jpg" height=50% width="50%">
+    </div>
 </body>
+
 </html>
