"did some cleaning up of the files"

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>
         Sweedishhfish's Github Page
     </title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="assets/style.css"
 </head>
 
 <header>
     <h1>
-        Hello Everybody!
+        Hello Everybody! Check out my Portfolios.
     </h1>
 </header>
 
@@ -25,7 +25,7 @@
 
 
     <div>
-        <img src="cuteRaz.jpg" height=50% width="50%">
+        <img src="assets/images/cuteRaz.jpg" height=50% width="50%">
     </div>
 </body>
 
