--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>
         Sweedishhfish's Github Page
     </title>
-    <link rel="stylesheet" type="text/css" href="assets/style.css"
+    <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 
 <header>
