"changed name from sweedishhfish to my name"

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>
-        Sweedishhfish's Github Page
+        Randy Olson's Github Page
     </title>
     <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
