--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
     <div>
-        <img src="assets/images/cuteRaz.jpg" height=50% width="50%">
+        <img src="assets/images/cuteRaz.jpg">
     </div>
 </body>
 
