"Made some styling changes"

--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
 
 <body>
     <div id="links">
-        <a id="boot" href="Bootstrap-Portfolio/index.html">My Bootstrap Portfolio</a>
+        <div>
+            <a id="boot" href="Bootstrap-Portfolio/index.html">My Bootstrap Portfolio</a>
+        </div>
 
-        <a id="responsive" href="Responsive-Portfolio/index.html">My Responsive Portfolio</a>
+        <div>
+            <a id="responsive" href="Responsive-Portfolio/index.html">My Responsive Portfolio</a>
+        </div>
     </div>
-
 
 
     <div>
