got wordGuess added

--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
 </header>
 
 <body>
-    <div id="links">
-        <div>
-            <a id="boot" href="Bootstrap-Portfolio/index.html">My Bootstrap Portfolio</a>
+    <div class="container">
+        <div id="links">
+            <div>
+                <a id="boot" href="Bootstrap-Portfolio/index.html">My Bootstrap Portfolio</a>
+            </div>
+
+            <div>
+                <a id="responsive" href="Responsive-Portfolio/index.html">My Responsive Portfolio</a>
+            </div>
         </div>
 
+
         <div>
-            <a id="responsive" href="Responsive-Portfolio/index.html">My Responsive Portfolio</a>
+            <img src="assets/images/cuteRaz.jpg">
         </div>
-    </div>
-
-
-    <div>
-        <img src="assets/images/cuteRaz.jpg">
     </div>
 </body>
 
